# LumePluginTemplate

./: .gitmodules  CMakeLists.txt
api/plugintemplate/: implementation_uids.h  namespace.h
assets/pt/shaders/computeshader/: sr_adam_optimizer.comp  sr_adam_optimizer.shader  sr_differentiable_render.comp  sr_differentiable_render.shader  texture_downsample.comp  texture_downsample.shader
src/plugin/: dynamic_plugin.cpp
src/render/node/: render_node_default_material_deferred_shading.cpp  render_node_default_material_deferred_shading.h  render_node_sr_training.cpp  render_node_sr_training.h
